src/objects/Portal_Payment_Plan__c.object
<CustomObject>
    <fields>
        <fullName>Per_Referral_Fee__c</fullName>
        <inlineHelpText>Amount o</inlineHelpText>
        <label>Per Referral Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Per_Referral_Maximum_Number__c</fullName>
        <inlineHelpText>Maximum number of referrals with per referral fee</inlineHelpText>
        <label>Per Referral Maximum Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Per_Sale_Fixed_Amount__c</fullName>
        <inlineHelpText>Amount of money per referral converted to a sale</inlineHelpText>
        <label>Per Sale Fixed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Stop_Per_Referral_After_First_Sale__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stop Per Referral After First Sale</label>
        <type>Checkbox</type>
    </fields>
    <label>Portal Payment Plan</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Per_Referral_Fee__c</columns>
        <columns>Per_Referral_Maximum_Number__c</columns>
        <columns>Per_Sale_Fixed_Amount__c</columns>
        <columns>Stop_Per_Referral_After_First_Sale__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Portal Payment Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Portal Payment Plan</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>